// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticationLinks matches snapshot 1`] = `
<div
  className="authentication-links"
>
  <styled.div>
    <Connect(ModalTrigger)
      id="LOGIN_MODAL"
      text="Already registered? Login in"
      wrapper={[Function]}
    />
  </styled.div>
  <styled.div>
    <Connect(ModalTrigger)
      id="REGISTRATION_MODAL"
      text="Create an account"
      wrapper={[Function]}
    />
  </styled.div>
  <styled.div>
    <Connect(ModalTrigger)
      id="CONFIRMATION_MODAL"
      text="I have a confirmation code"
      wrapper={[Function]}
    />
  </styled.div>
  <styled.div>
    <Connect(ModalTrigger)
      id="RESEND_CONFIRMATION_MODAL"
      text="Didn't receive confirmation instructions?"
      wrapper={[Function]}
    />
  </styled.div>
</div>
`;

exports[`AuthenticationLinks matches snapshot with everything excluded 1`] = `
<div
  className="authentication-links"
/>
`;

exports[`AuthenticationLinks matches snapshot with one link excluded 1`] = `
<div
  className="authentication-links"
>
  <styled.div>
    <Connect(ModalTrigger)
      id="REGISTRATION_MODAL"
      text="Create an account"
      wrapper={[Function]}
    />
  </styled.div>
  <styled.div>
    <Connect(ModalTrigger)
      id="CONFIRMATION_MODAL"
      text="I have a confirmation code"
      wrapper={[Function]}
    />
  </styled.div>
  <styled.div>
    <Connect(ModalTrigger)
      id="RESEND_CONFIRMATION_MODAL"
      text="Didn't receive confirmation instructions?"
      wrapper={[Function]}
    />
  </styled.div>
</div>
`;
